[tool.poetry]
name = "tls-scan"
version = "0.1.2"
description = "Scan IP addresses for TLS/SSL certificates"
authors = ["Sergey M"]
readme = "README.md"
repository = "https://github.com/s3rgeym/tls-scan"
# https://pypi.org/classifiers/

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tls-scan = 'tls_scan:main'
